Perf improvement for some scenarios by caching SplashPath.

PDF from https://bugs.freedesktop.org/show_bug.cgi?id=11849
shows a high rate of creation/destruction of SplashPath
objects. At the same time, only a few exists at the same
time. This patch implements a small cache to recycle
SplashPath objects. In my test rendering time for the above
PDF dropped ~4%, mostly thanks to decent reduction in
malloc/free calls.